fixed product view on mobile

--- a/scss/_off.scss
+++ b/scss/_off.scss
@@ -386,3 +386,10 @@ a[aria-controls="idOfLeftMenu"] {
   }
 
 }
+
+@media only screen and (max-width: 28.125em) {
+  .products li, ul.pagination li {float: none; display: inline-block;}
+  ul.products, #pages, ul.button-group  {text-align: center;}
+  ul.pagination li:first-child {display: block;}
+  ul.button-group li {margin-top: 3px;margin-bottom: 3px;}
+}
